@@ -1,3 +1,8 @@
+2005-12-15  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+
+	* src/sitelistdlg.cpp:
+	(CSiteListDlg::LoadSiteList): Fix some problem with icons of treeview.
+
 2005-12-11 Emfox Zhou  <emfoxzhou@gmail.com>
 
 	* src/view/telnetcon.h,
